<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="60dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="60dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentStartHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="60dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentEndHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="50dp"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/LoginScreenBodyTextWidth"
        android:layout_height="@dimen/LoginScreenBodyTextHeight"
        android:fontFamily="@font/helvetica_regular"
        android:gravity="center"
        android:text="@string/LoginScreenBodyText"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize36sp"
        app:layout_constraintTop_toTopOf="@id/contentStartHorizontal"
        app:layout_constraintLeft_toLeftOf="@id/contentStart"
        app:layout_constraintRight_toRightOf="@id/contentEnd" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/LoginScreenButtonWidth"
        android:layout_height="@dimen/LoginScreenButtonHeight"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/helvetica_regular"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/LoginScreenTextButton"
        android:textAllCaps="false"
        android:textSize="@dimen/TextSize20sp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@id/password_login"
        android:elevation="4dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/LoginScreenImageWidth"
        android:layout_height="@dimen/LoginScreenImageHeight"
        app:layout_constraintBottom_toBottomOf="@id/contentEndHorizontal"
        app:layout_constraintLeft_toLeftOf="@id/contentStart"
        app:layout_constraintRight_toRightOf="@id/contentEnd"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:alpha="0.7"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/LoginScreenTextView1"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize10sp"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@id/password_login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_regular"
        android:text="@string/LoginScreenTextView2"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize10sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="@dimen/LoginScreenEditTextWidth"
        android:layout_height="@dimen/LoginScreenEditTextHeight"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittetext_border"
        android:ems="10"
        android:fontFamily="@font/helvetica_light"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/PaddingLeft20"
        android:hint="Email"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize16sp"
        app:layout_constraintLeft_toLeftOf="@id/contentStart"
        app:layout_constraintRight_toRightOf="@id/contentEnd"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="@dimen/LoginScreenEditTextWidth"
        android:layout_height="@dimen/LoginScreenEditTextHeight"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittetext_border"
        android:ems="10"
        android:fontFamily="@font/helvetica_light"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/PaddingLeft20"
        android:hint="@string/LoginScreenEditText2"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize16sp"
        app:layout_constraintLeft_toLeftOf="@id/contentStart"
        app:layout_constraintRight_toRightOf="@id/contentEnd"
        app:layout_constraintTop_toBottomOf="@id/email_login" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/LoginScreenIconWidth"
        android:layout_height="@dimen/LoginScreenIconHeight"
        android:layout_marginEnd="@dimen/LoginScreenIconMarginEnd"
        app:layout_constraintBottom_toBottomOf="@+id/email_login"
        app:layout_constraintEnd_toEndOf="@+id/email_login"
        app:layout_constraintTop_toTopOf="@+id/email_login"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/LoginScreenIconWidth"
        android:layout_height="@dimen/LoginScreenIconHeight"
        android:layout_marginEnd="@dimen/LoginScreenIconMarginEnd"
        app:layout_constraintBottom_toBottomOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintTop_toTopOf="@+id/password_login"
        app:srcCompat="@drawable/password" />


</androidx.constraintlayout.widget.ConstraintLayout>